Implement --help{tools,language,internal,expert}.